--- a/roles/buildbot_master/defaults/main.yaml
+++ b/roles/buildbot_master/defaults/main.yaml
@@ -41,7 +41,7 @@ buildbot_master_sqlalchemy_version: ''
 buildbot_master_buildbot_version: ''
 
 # List of master config files.
-buildbot_master_config_files: ['master.cfg']
+buildbot_master_config_files: []
 
 # The master web interface URL.
 buildbot_master_url: "http://{{ ansible_default_ipv4.address }}/"
