--- a/roles/buildbot_worker/defaults/main.yaml
+++ b/roles/buildbot_worker/defaults/main.yaml
@@ -1,2 +1,8 @@
 ---
 buildbot_worker_basedir: /var/lib/buildbot/workers/{{ buildbot_project }}
+
+# Buildbot master host name or address.
+buildbot_master_host: localhost
+
+# Buildbot master port number.
+buildbot_master_port: 9989
