Fix pkg_resources module not found error on CentOS 7
The ansible pip module fails to load without python-pip packages from
EPEL installed.

--- a/roles/buildbot_worker/tasks/install/CentOS-7.yaml
+++ b/roles/buildbot_worker/tasks/install/CentOS-7.yaml
@@ -7,12 +7,13 @@
     update_cache: yes
   tags: root
 
-# The c compiler is required to build the twisted modules.
-- name: "CentOS-7: Install python3 and gcc"
+# A c compiler is required to build the twisted modules.
+- name: "CentOS-7: Install packages"
   become: yes
   yum:
     state: present
     name:
+     - python-pip
      - python3
      - make
      - gcc
