--- a/roles/buildbot_master/tasks/install.yaml
+++ b/roles/buildbot_master/tasks/install.yaml
@@ -44,12 +44,26 @@
       - "buildbot[bundle]{{ buildbot_master_buildbot_version }}"
     virtualenv: "{{ buildbot_master_venv }}"
     virtualenv_command: "{{ buildbot_master_python }} -m venv"
+  register: pip_install_results
 
 - name: "Create symlink to buildbot command"
   file:
     state: link
     src: "{{ buildbot_master_venv }}/bin/buildbot"
     path: "{{ buildbot_master_buildbot_command }}"
+
+- name: "Query buildbot installed version"
+  command:
+    cmd: "{{ buildbot_master_venv }}/bin/pip show buildbot"
+  changed_when: false
+  register: pip_show_results
+
+- name: "Set buildbot_master_installed_version fact."
+  set_fact:
+    buildbot_master_installed_version: "{{ pip_show_results.stdout | regex_search('Version: ([0-9]+.[0-9]+.[0-9]+)', '\\1') | first }}"
+
+- debug:
+    var: buildbot_master_installed_version
 
 # Apply bug fix for gerrit issue. For more information see:
 # - https://github.com/buildbot/buildbot/issues/5190
@@ -58,4 +72,6 @@
   patch:
     src: buildbot-issue-5190.patch
     basedir: "{{ buildbot_master_venv }}/lib/python3.6/site-packages/buildbot"
-  when: buildbot_master_patch | d('yes') | bool
+  when:
+    - buildbot_master_patch | d('yes') | bool
+    - buildbot_master_installed_version is version('2.8.4', '<')
