Restart the buildbot after an upgrade
Add the restart handler notification if the install task changed so the
buildbot master is restarted when upgraded.

--- a/roles/buildbot_master/tasks/install.yaml
+++ b/roles/buildbot_master/tasks/install.yaml
@@ -45,6 +45,7 @@
     virtualenv: "{{ buildbot_master_venv }}"
     virtualenv_command: "{{ buildbot_master_python }} -m venv"
   register: pip_install_results
+  notify: "restart buildbot master"
 
 - name: "Create symlink to buildbot command"
   file:
@@ -75,3 +76,4 @@
   when:
     - buildbot_master_patch | d('yes') | bool
     - buildbot_master_installed_version is version('2.8.4', '<')
+  notify: "restart buildbot master"
