Run buildbot master as a service when sudo is available
Currently, we allows use a user cron job to run the buildbot master,
since we cannot assume we have sudo access on the buildbot master host.
But, if sudo access is available, run the master with systemd like a
normal service.

--- a/roles/buildbot_master/defaults/main.yaml
+++ b/roles/buildbot_master/defaults/main.yaml
@@ -2,6 +2,10 @@
 # Buildbot project name.
 buildbot_project: myproject
 
+# Buildbot master user and group.
+buildbot_master_user: "{{ ansible_user }}"
+buildbot_master_group: "{{ ansible_user }}"
+
 # Buildbot master home directory.
 buildbot_master_home: "{{ ansible_user_dir }}"
 
