Allow master config templates to end in .j2
The master configuration templates are now jinja2 templates, so trim the
.j2 extentions when rendering.

Rename buildbot_master_config_files to buildbot_master_config_templates
to make it more clear these are templates.  (The old name is the default
for backward compat.)

--- a/roles/buildbot_master/defaults/main.yaml
+++ b/roles/buildbot_master/defaults/main.yaml
@@ -48,7 +48,7 @@ buildbot_master_buildbot_version: ''
 buildbot_master_port: 9989
 
 # List of master config files.
-buildbot_master_config_files: []
+buildbot_master_config_templates: "{{ buildbot_master_config_files | d([]) }}"
 
 # Run an hourly check to ensure the buildbot master process is running.
 buildbot_master_watchdog: yes
