--- a/roles/buildbot_master/tasks/configure.yaml
+++ b/roles/buildbot_master/tasks/configure.yaml
@@ -12,8 +12,8 @@
 - name: "Install the buildbot master configuration."
   template:
     src: "{{ item }}"
-    dest: "{{ buildbot_master_basedir }}/{{ item | basename }}"
-  loop: "{{ buildbot_master_config_files }}"
+    dest: "{{ buildbot_master_basedir }}/{{ item | basename | regex_replace('\\.j2$', '') }}"
+  loop: "{{ buildbot_master_config_templates }}"
   # Note: We restart on configuration change for now since reloading
   #       has been found to break the gerrit integration in the past.
   notify: "restart buildbot master {{ buildbot_master_have_sudo | ternary('service', 'instance') }}"
