--- a/roles/buildbot_worker/tasks/install/Ubuntu.yaml
+++ b/roles/buildbot_worker/tasks/install/Ubuntu.yaml
@@ -1,5 +1,5 @@
 ---
-- name: "Ubuntu-18: Install buildbot worker"
+- name: "Ubuntu: Install buildbot worker"
   become: yes
   apt:
     state: present
