--- a/roles/buildbot_worker/tasks/service/Ubuntu.yaml
+++ b/roles/buildbot_worker/tasks/service/Ubuntu.yaml
@@ -1,6 +1,6 @@
 ---
 # Legacy init.d settings file.
-- name: "Ubuntu-20: Install buildbot worker settings"
+- name: "Ubuntu: Install buildbot worker settings"
   become: yes
   template:
     src: buildbot-worker.debian.j2
@@ -11,11 +11,11 @@
   tags: root
 
 # Note: The debian unit file is parameterized with the project name.
-- name: "Ubuntu-20: Set service name"
+- name: "Ubuntu: Set service name"
   set_fact:
     buildbot_worker_service: buildbot-worker@{{ buildbot_project }}
 
-- name: "Ubuntu-20: Start buildbot worker service"
+- name: "Ubuntu: Start buildbot worker service"
   become: yes
   systemd:
     name: "{{ buildbot_worker_service }}"
