tests: Remove duplicate molecule files
Use BOX env var to specify the test platform instead of duplicating the
molecule.yml files.

--- a/roles/buildbot_worker/molecule/default/molecule.yml
+++ b/roles/buildbot_worker/molecule/default/molecule.yml
@@ -7,7 +7,7 @@ driver:
 
 platforms:
   - name: m-bot
-    box: generic/debian10
+    box: ${BOX:-generic/debian11}
     groups:
       - openafs_buildbot_workers
 
