tests: Remove hard coded drivers in molecule files
Use a molecule base config to set the driver name and options.

Put the base config in a path searched by molecule, or specify
the molecule --base-config option to specify a non-standard
path.

--- a/roles/buildbot_master/molecule/default/molecule.yml
+++ b/roles/buildbot_master/molecule/default/molecule.yml
@@ -1,11 +1,9 @@
 ---
 dependency:
   name: galaxy
-driver:
-  name: vagrant
 platforms:
   - name: m-buildbot-master
-    box: generic/centos7
+    box: ${BOX:-generic/centos7}
     groups:
       - openafs_buildbot_masters
 provisioner:
