Install python3-setuptools on AlmaLinux
The setuptools module is required by the Ansible pip module, so be sure
it is installed before running the pip task, otherwise it may fail with
a error about the missing setuptools module.

--- a/roles/buildbot_worker/tasks/install/AlmaLinux.yaml
+++ b/roles/buildbot_worker/tasks/install/AlmaLinux.yaml
@@ -1,5 +1,5 @@
 ---
-- name: "AlmaLinux-8: Add EPEL repository"
+- name: "AlmaLinux: Add EPEL repository"
   become: yes
   yum:
     state: present
@@ -8,37 +8,39 @@
   tags: root
 
 # The c compiler is required to build the twisted modules.
-- name: "AlmaLinux-8: Install python3 and gcc"
+- name: "AlmaLinux: Install python3 and gcc"
   become: yes
   yum:
     state: present
     name:
      - python3
+     - python3-setuptools
      - make
      - gcc
   tags: root
 
-- name: "AlmaLinux-8: Create python virtual env"
+- name: "AlmaLinux: Create python virtual env"
   become: yes
   pip:
     name: pip
     state: latest
+    #executable: pip3
     virtualenv: /opt/buildbot-worker
     virtualenv_command: /usr/bin/python3 -m venv
   tags: root
 
-- name: "AlmaLinux-8: Install buildbot worker"
+- name: "AlmaLinux: Install buildbot worker"
   become: yes
   pip:
     name: buildbot-worker
     virtualenv: /opt/buildbot-worker
   tags: root
 
-- name: "AlmaLinux-8: Set buildbot-worker path"
+- name: "AlmaLinux: Set buildbot-worker path"
   set_fact:
     buildbot_worker_bin: /usr/bin/buildbot-worker
 
-- name: "AlmaLinux-8: Create buildbot-worker symlink"
+- name: "AlmaLinux: Create buildbot-worker symlink"
   become: yes
   file:
     state: link
