--- a/roles/buildbot_worker/tasks/main.yaml
+++ b/roles/buildbot_worker/tasks/main.yaml
@@ -67,54 +67,29 @@
     passwd: "'{{ buildbot_worker_password }}'"
   notify: "Restart service"
 
-# Stage the buildbot info files in the ansible_user's home directory, then copy
-# them to the unprivileged buildbot user's directory. This avoids the annoying
-# ansible warning:
-#
-#    Using world-readable permissions for temporary files Ansible needs to
-#    create when becoming an unprivileged user.
-- name: "Create configuration staging directory"
+- name: "Create buildbot worker info directory."
   become: yes
   file:
     state: directory
-    path: ".ansible/buildbot_worker"
-
-- name: "Stage the worker host info"
-  become: yes
-  copy:
-    content: >
-      {{ ansible_distribution }}
-      {{ ansible_distribution_version }}
-      {{ ansible_machine }}
-    dest: ".ansible/buildbot_worker/host"
-
-- name: "Stage the worker admin info"
-  become: yes
-  copy:
-    content: >
-      {{ buildbot_worker_admin }}
-    dest: ".ansible/buildbot_worker/admin"
-
-- name: "Stage the worker access uri"
-  become: yes
-  copy:
-    content: >
-      ssh://{{ ansible_fqdn }}
-    dest: ".ansible/buildbot_worker/access_uri"
-
-- name: "Install buildbot worker info files"
-  become: yes
-  copy:
-    remote_src: yes
-    src: ".ansible/buildbot_worker/{{ item }}"
-    dest: "{{ buildbot_worker_basedir }}/info/{{ item }}"
+    path: "{{ buildbot_worker_basedir }}/info"
     owner: "{{ buildbot_user.uid }}"
     group: "{{ buildbot_user.group }}"
-    mode: 0644
-  with_items:
-    - host
-    - admin
-    - access_uri
+    mode: "0755"
+
+- name: "Update buildbot worker info files."
+  become: yes
+  template:
+    src: "info-{{ info_item }}.j2"
+    dest: "{{ buildbot_worker_basedir }}/info/{{ info_item }}"
+    owner: "{{ buildbot_user.uid }}"
+    group: "{{ buildbot_user.group }}"
+    mode: "0644"
+  loop:
+    - "host"
+    - "admin"
+    - "access_uri"
+  loop_control:
+    loop_var: info_item
   notify: "Restart service"
 
 - name: "Include OS specific service tasks"
