--- a/roles/buildbot_worker/tasks/install/openSUSE_Leap.yaml
+++ b/roles/buildbot_worker/tasks/install/openSUSE_Leap.yaml
@@ -1,17 +1,40 @@
 ---
-- name: "openSUSE: Add repository for buildbot packages"
-  become: yes
-  zypper_repository:
-    name: "illuusio:/python"
-    repo: "https://download.opensuse.org/repositories/home:/illuusio:/python/openSUSE_Leap_15.2/"
-    auto_import_keys: yes
-  tags: root
-
-- name: "openSUSE: Install buildbot worker package"
+# The c compiler is required to build the twisted modules.
+- name: "openSUSE: Install python3 and gcc"
   become: yes
   zypper:
     state: present
     name:
-      - python3-buildbot_worker
-      - python3-service_identity
+     - python3
+     - python3-setuptools
+     - make
+     - gcc
+  tags: root
+
+- name: "openSUSE: Create python virtual env"
+  become: yes
+  pip:
+    name: pip
+    state: latest
+    virtualenv: /opt/buildbot-worker
+    virtualenv_command: /usr/bin/python3 -m venv
+  tags: root
+
+- name: "openSUSE: Install buildbot worker"
+  become: yes
+  pip:
+    name: buildbot-worker
+    virtualenv: /opt/buildbot-worker
+  tags: root
+
+- name: "openSUSE: Set buildbot-worker path"
+  set_fact:
+    buildbot_worker_bin: /usr/bin/buildbot-worker
+
+- name: "openSUSE: Create buildbot-worker symlink"
+  become: yes
+  file:
+    state: link
+    src: /opt/buildbot-worker/bin/buildbot-worker
+    path: "{{ buildbot_worker_bin }}"
   tags: root
