--- a/roles/buildbot_worker/vars/Solaris-11.4.yaml
+++ b/roles/buildbot_worker/vars/Solaris-11.4.yaml
@@ -1,4 +1,4 @@
 ---
 buildbot_worker_user: buildbot
-buildbot_worker_group: buildbot
+buildbot_worker_group: staff
 buildbot_worker_bin: /usr/bin/buildbot-worker
