worker: Avoid logging worker passwd
Add a loop_control.label to the worker configuration task to avoid
printing the worker's passwd while running the playbook.

--- a/roles/buildbot_worker/tasks/main.yaml
+++ b/roles/buildbot_worker/tasks/main.yaml
@@ -85,6 +85,8 @@
     port: "{{ buildbot_master_port }}"
     workername: "'{{ buildbot_worker_name }}'"
     passwd: "'{{ buildbot_worker_password }}'"
+  loop_control:
+    label: "key: {{ item.key }}, value: {{ (item.key == 'passwd') | ternary('********', item.value) }}"
   notify: "Restart service"
 
 - name: "Create buildbot worker info directory."
